<?xml version="1.0"?>
<package format="2">
    <name>plotjuggler</name>
    <version>2.3.0</version>
    <description>PlotJuggler: juggle with data</description>

    <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
    <license>LGPLv3</license>

    <url type="website">https://github.com/facontidavide/PlotJuggler</url>

    <author email="davide.faconti@gmail.com">Davide Faconti</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>rosbag2</depend>
    <depend>rosidl_typesupport_cpp</depend>
    <depend>rosidl_typesupport_introspection_cpp</depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
